--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "Sajedah Yousef <yousef.sajedah93@gmail.com>"
   ],
   "scripts": {
+    "postinstall":"bower install",
     "lint": "jscs ./"
   },
   "repository": {
