--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "bower":"latest",
     "browser-sync": "^1.5.7",
     "chai": "^3.4.1",
     "clone-stats": "0.0.1",
